<resources>
    <string name="app_name">MentorGram</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="codehive_id">Codehive Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already Have an account? LogIn</string>
    <string name="log_in">Log In</string>
    <string name="enter_username">Enter Username</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in2">LOG IN</string>
</resources>